avoid word breaks in code

--- a/src/assets/css/sh.css
+++ b/src/assets/css/sh.css
@@ -9,6 +9,9 @@
 
 }
 
+/* don't cut words in code */
+.md-typeset code { word-break: keep-all; }
+
 /* title style */
 .md-header-nav__title,
 .md-header-nav__topic {
